[tool.poetry]
name = "commoner"
version = "0.5.0"
description = "Commoner provides a set of common functions and classes for Python projects."
authors = ["uncenter <me@uncenter.org>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
target-version = ["py39"]